--- a/Cpp/CppQtNote/hunt/笔试套卷记录.md
+++ b/Cpp/CppQtNote/hunt/笔试套卷记录.md
@@ -78,8 +78,8 @@
 
 图中的问题是关于 `void*` 类型转换的正确说法。我们来逐一分析选项：
 
-- A、`void*` 可以直接赋值给任何类型的指针，不需要强制转换：不正确。`void*` 可以赋值给任何类型的指针，但通常需要显式转换。
-- B、任何类型的指针都可以直接赋值给 `void*`，需要强制转换：不正确。任何类型的指针都可以赋值给 `void*`，不需要强制转换。
+- A、`void*` 可以直接赋值给任何类型的指针，不需要强制转换：不正确。**`void*` 可以赋值给任何类型的指针，但通常需要显式转换。**
+- B、任何类型的指针都可以直接赋值给 `void*`，需要强制转换：不正确。**任何类型的指针都可以赋值给 `void*`，不需要强制转换。**
 - **C、任何类型的指针都可以直接赋值给 `void*`，不需要强制转换**：正确。这是 `void*` 的特性之一，任何类型的指针都可以隐式转换为 `void*`。
 - D、`void*` 可以直接进行指针运算：不正确。`void*` 不能直接进行指针运算，因为它没有具体的类型大小信息。
 
